apps/base/cluster-longhorn/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # prevent the controller from redirecting (308) to HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # custom max body size for file uploading like backing image uploading
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/name: Longhorn UI
    gethomepage.dev/icon: longhorn
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=longhorn"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - longhorn.infra.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: longhorn.infra.intra.web_domain_name
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
