apps/base/cluster-longhorn/deploy/longhorn-manager-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-manager-custom
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
    - ports:
        - port: manager
      from:
        # Allow from prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
